gatekeeper/gatekeeper-ns.yaml
# yaml for creating kubernetes namespace system-policy
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper
